[gd_scene load_steps=6 format=3 uid="uid://ckbxl7gshnyy1"]

[ext_resource type="FontFile" uid="uid://dl33nbvc6p8qq" path="res://fonts/double_pixel-7.ttf" id="1_2hi2q"]
[ext_resource type="Script" uid="uid://cqlwuchf0d4cw" path="res://scripts/levels/game_over_screen.gd" id="1_ocpdv"]
[ext_resource type="AudioStream" uid="uid://nj17lfbkiqtb" path="res://musicandeffects/GameOver/Game_over_by_the_sea.ogg" id="3_7lkwh"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ocpdv"]
bg_color = Color(1, 0.722, 0.173, 0.873)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7lkwh"]
bg_color = Color(1, 0.722, 0.173, 0.657)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.816, 0.807, 0, 0)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color(0, 0, 0, 0.221)
shadow_size = 1
shadow_offset = Vector2(5, 8)

[node name="GameOverScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ocpdv")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AllContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -219.5
offset_bottom = 125.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="AllContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.713726, 0.164706, 1)
theme_override_colors/font_outline_color = Color(0.839911, 0.397972, 0.307972, 1)
theme_override_constants/line_spacing = -44
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_2hi2q")
theme_override_font_sizes/font_size = 158
text = "GAME
OVER"
horizontal_alignment = 1

[node name="Continue" type="Label" parent="AllContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.713726, 0.164706, 1)
theme_override_constants/line_spacing = -37
theme_override_constants/outline_size = 11
theme_override_fonts/font = ExtResource("1_2hi2q")
theme_override_font_sizes/font_size = 54
text = "Â¿CONTINUAR?"
horizontal_alignment = 1

[node name="ContinueChoiceContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 466.0
offset_top = 459.0
offset_right = 678.0
offset_bottom = 523.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/separation = 48

[node name="SI" type="Button" parent="ContinueChoiceContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2hi2q")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxFlat_ocpdv")
theme_override_styles/hover = SubResource("StyleBoxFlat_ocpdv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7lkwh")
theme_override_styles/normal = SubResource("StyleBoxFlat_7lkwh")
text = "  SI  "

[node name="NO" type="Button" parent="ContinueChoiceContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_2hi2q")
theme_override_font_sizes/font_size = 33
theme_override_styles/focus = SubResource("StyleBoxFlat_ocpdv")
theme_override_styles/hover = SubResource("StyleBoxFlat_ocpdv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_7lkwh")
theme_override_styles/normal = SubResource("StyleBoxFlat_7lkwh")
text = "  NO  "

[node name="GameOverMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_7lkwh")
autoplay = true
parameters/looping = true

[connection signal="pressed" from="ContinueChoiceContainer/SI" to="." method="_on_si_pressed"]
[connection signal="pressed" from="ContinueChoiceContainer/NO" to="." method="_on_no_pressed"]
